fix most sonarqube warnings